--- a/P1_Parcial_2_Martel_Emiliano.vcxproj
+++ b/P1_Parcial_2_Martel_Emiliano.vcxproj
@@ -128,9 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AddLife.cpp" />
+    <ClCompile Include="AddScore.cpp" />
     <ClCompile Include="AwesomeLibrary.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="GeneralFunctions.cpp" />
+    <ClCompile Include="MultiplyScore.cpp" />
     <ClCompile Include="P1_Parcial_2_Martel_Emiliano.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Pickable.cpp" />
@@ -138,10 +142,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AddLife.h" />
+    <ClInclude Include="AddScore.h" />
     <ClInclude Include="AwesomeLibrary.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="GeneralFunctions.h" />
+    <ClInclude Include="MultiplyScore.h" />
     <ClInclude Include="Pickable.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
